replaced new Long() with Long.valueOf()